# gemma-cli

./: ".gitignore"  .gitignore  README.md  pyproject.toml
gemma/: __main__.py  chat.py  config.py  inference.py  main.py  models.py  skills.py  splash.py  tools.py
