[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma-cli"
version = "0.1.0"
description = "A blazingly fast local Gemma 4 CLI"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "mlx-lm>=0.4.3",
    "huggingface-hub>=0.23",
]

[project.scripts]
gemma = "gemma.main:main"

[tool.hatch.build.targets.wheel]
packages = ["gemma"]
